--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input {
+  @apply py-2 text-base text-black outline-none;
+}
+
+h1 {
+  @apply text-2xl font-medium text-black;
+}
+
+h3 {
+  @apply text-base font-medium text-black;
+}
+
+.btn-circle {
+  @apply rounded-full border border-[#D3D8DF] px-3 py-1;
+}
+
+.list-enter-active,
+.list-leave-active {
+  @apply transition-all duration-300 ease-in;
+}
+
+.list-enter-from,
+.list-leave-to {
+  @apply translate-x-8 opacity-0;
+}
+
+.list-move {
+  @apply transition-transform duration-500;
+}
